fixtures/solidity/translated_semantic_tests/errors/simple/simple.sol
error E(uint a, uint b);
contract C {
    function f() public pure {
        revert E(2, 7);
    }
}